Fix rendering of start buttons on mobile

--- a/styles/instructions.module.scss
+++ b/styles/instructions.module.scss
@@ -30,6 +30,12 @@
         margin-top: 0;
       }
     }
+
+    .startGameContainer {
+      display: grid;
+      justify-content: center;
+      gap: 1rem;
+    }
   }
 
   .about {
